--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,8 @@
+import url('https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap');
+
 body {
     background-color: #00000000;
+    
   }
   
   #canvas{
